<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="4dp"
                android:layout_margin="@dimen/card_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/card_padding"
                    android:paddingBottom="@dimen/card_padding"
                    android:background="@drawable/shape_paragraph">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_image_height"
                        android:src="@drawable/banner_platzi_conf" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_frag_tv_que_es"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_text_size"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginStart="@dimen/home_title_margin"
                        android:layout_marginEnd="@dimen/home_title_margin"
                        android:layout_marginTop="@dimen/home_title_margin"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/separator_margin"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_frag_tv_que_es_resp"
                        android:textSize="@dimen/desc_text_size"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginStart="@dimen/home_title_margin"
                        android:layout_marginEnd="@dimen/home_title_margin"
                        android:layout_marginTop="@dimen/home_title_margin"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="4dp"
                android:layout_margin="@dimen/card_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/card_padding"
                    android:background="@drawable/shape_paragraph">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_image_height"
                        android:src="@drawable/platzi_conf_2"
                        android:scaleType="centerCrop"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_frag_tv_por_que"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_text_size"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginStart="@dimen/home_title_margin"
                        android:layout_marginEnd="@dimen/home_title_margin"
                        android:layout_marginTop="@dimen/home_title_margin"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/separator_margin"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_frag_tv_por_que_resp"
                        android:textSize="@dimen/desc_text_size"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginStart="@dimen/home_title_margin"
                        android:layout_marginEnd="@dimen/home_title_margin"
                        android:layout_marginTop="@dimen/home_title_margin"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="4dp"
                android:layout_margin="@dimen/card_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/card_padding"
                    android:background="@drawable/shape_paragraph">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_image_height"
                        android:src="@drawable/platzi_conf_3"
                        android:scaleType="centerCrop"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_frag_tv_info"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_text_size"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginStart="@dimen/home_title_margin"
                        android:layout_marginEnd="@dimen/home_title_margin"
                        android:layout_marginTop="@dimen/home_title_margin"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/separator_margin"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_frag_tv_info_resp"
                        android:textSize="@dimen/desc_text_size"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginStart="@dimen/home_title_margin"
                        android:layout_marginEnd="@dimen/home_title_margin"
                        android:layout_marginTop="@dimen/home_title_margin"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>